test/fail/addr.c4
fn foo(): void {
	let a: *int = &10;
}
